--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,16 @@
 <body>
 
   <h1>Restaurants</h1>
+
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <ul>
+        {% for message in messages %}
+          <li><strong>{{ message }}</strong></li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
   
   <ul>
     {% for restaurant in restaurants_list %}
