--- a/templates/restaurant_menu.html
+++ b/templates/restaurant_menu.html
@@ -7,7 +7,17 @@
 <body>
 
   <h1>{{ restaurant.name }}</h1>
-  
+
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <ul>
+        {% for message in messages %}
+          <li><strong>{{ message }}</strong></li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
+
   <ul>
     {% for item in menu_items %}
     <li>
