Create API instructions page

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,8 @@
     {% endfor %}
   </ul>
   <a href="{{ url_for('add_restaurant') }}">add new restaurant</a>
+  <br>
+  <a href="{{ url_for('api') }}">API</a>
 
 </body>
 </html>
