--- a/templates/restaurant_menu.html
+++ b/templates/restaurant_menu.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Restaurant Menus</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+
+{% block body %}
 
   <h1>{{ restaurant.name }}</h1>
 
@@ -36,5 +32,4 @@
   <br>
   <a href="{{ url_for('index') }}">HOME</a>
 
-</body>
-</html>
+{% endblock %}
