--- a/templates/add_menu_item.html
+++ b/templates/add_menu_item.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Restaurant Menus</title>
-</head>
-<body>
-  
+{% extends 'layout.html' %}
+
+{% block body %}
+
   <h1>Add New Item</h1>
 
   <form action="{{ url_for('add_menu_item', restaurant_id=restaurant_id) }}" method="post">  
@@ -34,5 +30,4 @@
   
   </form>
 
-</body>
-</html>
+{% endblock %}
