--- a/templates/add_restaurant.html
+++ b/templates/add_restaurant.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Restaurant Menus</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+
+{% block body %}
   
   <h1>Add New Restaurant</h1>
   
@@ -18,5 +14,4 @@
   
   </form>
 
-</body>
-</html>
+{% endblock %}
