--- a/templates/api.html
+++ b/templates/api.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Restaurant Menus</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+
+{% block body %}
 
   <h3>Usage:</h3>
 
@@ -33,5 +29,4 @@
     <hr>
   </ul>
 
-</body>
-</html>
+{% endblock %}
