--- a/templates/edit_menu_item.html
+++ b/templates/edit_menu_item.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Restaurant Menus</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+
+{% block body %}
 
   <h1>Edit {{ restaurant.name }} > {{ menu_item.name }} </h1>
   
@@ -34,5 +30,4 @@
   
   </form>
 
-</body>
-</html>
+{% endblock %}
