--- a/templates/edit_restaurant.html
+++ b/templates/edit_restaurant.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Restaurant Menus</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+
+{% block body %}
 
   <form action="{{ url_for('edit_restaurant', restaurant_id=restaurant.id) }}" method="post">
     
@@ -18,5 +14,4 @@
   
   </form>
 
-</body>
-</html>
+{% endblock %}
