--- a/templates/api.html
+++ b/templates/api.html
@@ -1,8 +1,14 @@
 {% extends 'layout.html' %}
 
+{% block style %}
+  <style>
+    pre {color:teal;}
+  </style>
+{% endblock %}
+
 {% block body %}
 
-  <h3>Usage:</h3>
+  <h3>API Usage:</h3><br>
 
   <ul>
     <li>
