--- a/templates/delete_menu_item.html
+++ b/templates/delete_menu_item.html
@@ -2,7 +2,8 @@
 
 {% block body %}
     
-  <h1>Are you sure you want to delete {{ restaurant.name }} > {{ menu_item.name }} ?</h1>
+  <h3>Are you sure you want to delete ( {{ restaurant.name }} > {{ menu_item.name }} ) ?</h3>
+  <br>
   
   <form action="{{ url_for('delete_menu_item', restaurant_id=restaurant.id, item_id=menu_item.id) }}" method="post">
 
