--- a/templates/edit_menu_item.html
+++ b/templates/edit_menu_item.html
@@ -2,8 +2,9 @@
 
 {% block body %}
 
-  <h1>Edit {{ restaurant.name }} > {{ menu_item.name }} </h1>
-  
+  <h3>Edit ( {{ restaurant.name }} > {{ menu_item.name }} )</h3>
+  <br>
+
   <form action="{{ url_for('edit_menu_item', restaurant_id=restaurant.id, item_id=menu_item.id) }}" method="post">
     
     <input name="item_new_name" type="text" placeholder="{{ menu_item.name }}">
