--- a/templates/restaurant_menu.html
+++ b/templates/restaurant_menu.html
@@ -2,7 +2,27 @@
 
 {% block body %}
 
-  <h1>{{ restaurant.name }}</h1>
+  <div class="row justify-content-between mb-2">
+    
+    <div class="col-7 ml-2">
+      <h3 style="display: inline-block;">{{ restaurant.name }}</h3>
+      (
+      <a href="{{ url_for('edit_restaurant', restaurant_id=restaurant.id) }}">Edit</a> | 
+      <a href="{{ url_for('delete_restaurant', restaurant_id=restaurant.id) }}">Delete</a> | 
+      <a href="{{ url_for('add_menu_item', restaurant_id=restaurant.id) }}">Add Item</a>
+      )
+    </div>
+    
+    <div class="col-3 mr-2">
+      <div style="text-align: right; position: relative; top:30%">
+          <a href="{{ url_for('index') }}">HOME</a> | 
+        <a href="{{ url_for('api') }}">API</a>
+      </div>
+    </div>
+  
+  </div>
+  <hr><br>
+
 
   {% with messages = get_flashed_messages() %}
     {% if messages %}
@@ -14,22 +34,18 @@
     {% endif %}
   {% endwith %}
 
-  <ul>
-    {% for item in menu_items %}
-    <li>
-      Name: {{ item.name }} <br>
-      Course: {{ item.course }} <br>
-      Price: {{ item.price }} <br>
-      Description: {{ item.description }} <br>
-      <a href="{{ url_for('edit_menu_item', restaurant_id=restaurant.id, item_id=item.id) }}">Edit</a>
-      <a href="{{ url_for('delete_menu_item', restaurant_id=restaurant.id, item_id=item.id) }}">Delete</a>
-      <hr>
-    </li>
-    {% endfor %}
-  </ul>
-
-  <a href="{{ url_for('add_menu_item', restaurant_id=restaurant.id) }}">add new item</a>
-  <br>
-  <a href="{{ url_for('index') }}">HOME</a>
+  <div class="row justify-content-center">
+  {% for item in menu_items %}
+  <div class="card col-sm-10 col-md-5 col-lg-3 m-1">
+    <div class="card-body">
+      <h5 class="card-title">{{ item.name }} | {{ item.price }}</h5>
+      <h6 class="card-subtitle mb-2 text-muted">{{ item.course }}</h6>
+      <p class="card-text">{{ item.description }}</p>
+      <a href="{{ url_for('edit_menu_item', restaurant_id=restaurant.id, item_id=item.id) }}" class="card-link">Edit</a>
+      <a href="{{ url_for('delete_menu_item', restaurant_id=restaurant.id, item_id=item.id) }}" class="card-link">Delete</a>
+    </div>
+  </div>
+  {% endfor %}
+  </div>
 
 {% endblock %}
