Separate api management in a blueprint

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     
     <div class="col-2 mr-2">
       <div style="text-align: right; position: relative; top:30%">  
-        <a href="{{ url_for('api') }}">API</a>
+        <a href="{{ url_for('api_management.api') }}">API</a>
       </div>
     </div>
   
