--- a/templates/restaurant_menu.html
+++ b/templates/restaurant_menu.html
@@ -16,7 +16,7 @@
     <div class="col-3 mr-2">
       <div style="text-align: right; position: relative; top:30%">
           <a href="{{ url_for('index') }}">HOME</a> | 
-        <a href="{{ url_for('api') }}">API</a>
+        <a href="{{ url_for('api_management.api') }}">API</a>
       </div>
     </div>
   
