--- a/templates/restaurant_menu.html
+++ b/templates/restaurant_menu.html
@@ -6,11 +6,13 @@
     
     <div class="col-7 ml-2">
       <h3 style="display: inline-block;">{{ restaurant.name }}</h3>
+      {% if is_owner %}
       (
       <a href="{{ url_for('edit_restaurant', restaurant_id=restaurant.id) }}">Edit</a> | 
       <a href="{{ url_for('delete_restaurant', restaurant_id=restaurant.id) }}">Delete</a> | 
       <a href="{{ url_for('add_menu_item', restaurant_id=restaurant.id) }}">Add Item</a>
       )
+      {% endif %}
     </div>
     
     <div class="col-3 mr-2">
@@ -41,8 +43,10 @@
       <h5 class="card-title">{{ item.name }} | {{ item.price }}</h5>
       <h6 class="card-subtitle mb-2 text-muted">{{ item.course }}</h6>
       <p class="card-text">{{ item.description }}</p>
+      {% if is_owner %}
       <a href="{{ url_for('edit_menu_item', restaurant_id=restaurant.id, item_id=item.id) }}" class="card-link">Edit</a>
       <a href="{{ url_for('delete_menu_item', restaurant_id=restaurant.id, item_id=item.id) }}" class="card-link">Delete</a>
+      {% endif %}
     </div>
   </div>
   {% endfor %}
