Create and connect a navigation bar

--- a/templates/restaurant_menu.html
+++ b/templates/restaurant_menu.html
@@ -2,8 +2,7 @@
 
 {% block body %}
 
-  <div class="row justify-content-between mb-2">
-    
+  <div class="row mb-2">
     <div class="col-7 ml-2">
       <h3 style="display: inline-block;">{{ restaurant.name }}</h3>
       {% if is_owner %}
@@ -14,14 +13,6 @@
       )
       {% endif %}
     </div>
-    
-    <div class="col-3 mr-2">
-      <div style="text-align: right; position: relative; top:30%">
-          <a href="{{ url_for('index') }}">HOME</a> | 
-        <a href="{{ url_for('api_management.api') }}">API</a>
-      </div>
-    </div>
-  
   </div>
   <hr><br>
 
