--- a/templates/index.html
+++ b/templates/index.html
@@ -2,21 +2,13 @@
 
 {% block body %}
 
-  <div class="row justify-content-between mb-2">
-    
+  <div class="row mb-2">
     <div class="col-8 ml-2">
       <h3 style="display: inline-block;">Restaurants</h3>
-      {% if is_app_user %}
+      {% if is_logged_in %}
       (<a href="{{ url_for('add_restaurant') }}">Add</a>)
       {% endif %}
     </div>
-    
-    <div class="col-2 mr-2">
-      <div style="text-align: right; position: relative; top:30%">  
-        <a href="{{ url_for('api_management.api') }}">API</a>
-      </div>
-    </div>
-  
   </div>
 
   {% with messages = get_flashed_messages() %}
