--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,15 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <title>Restaurant Menus</title>
-  <!-- Add Bootstrap -->
+  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <!-- extra headers block -->
   {% block head %}
   {% endblock %}
 </head>
 <body style="background-color: #DDD">
+    
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-sm sticky-top navbar-light bg-light">
+    
+    <a class="navbar-brand mb-0 h1" href="{{url_for('index')}}">Restuarants and Menus</a>
+    
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('api_management.api')}}">API</a>
+        </li>
+        {% if is_logged_in %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('login_management.gdisconnect')}}">Logout</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('login_management.login')}}">Login</a>
+        </li>
+        {% endif %}
+      </ul>
+    </div>
+
+  </nav>
+  
+  <!-- body block -->
   <div class="container-fluid p-5">
     {% block body %}
     {% endblock %}
   </div>
+
 </body>
 </html>
