--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,11 @@
 
   {% with messages = get_flashed_messages() %}
     {% if messages %}
-      <ul>
-        {% for message in messages %}
-          <li><strong>{{ message }}</strong></li>
-        {% endfor %}
-      </ul>
+      {% for message in messages %}
+      <div class="alert alert-success" role="alert">
+        {{ message }}
+      </div>
+      {% endfor %}
     {% endif %}
   {% endwith %}
   
