Implement Facebook OAuth login

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,7 @@
             <img src="{{user.picture}}" width="40" height="40" style="background-color: blue; border-radius: 20px">
           </div>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="nav-link dropdown-item" href="{{url_for('login_management.gdisconnect')}}">Logout</a>
+            <a class="nav-link dropdown-item" href="{{url_for('login_management.disconnect')}}">Logout</a>
           </div>
         </li>
         {% else %}
