--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,7 +28,10 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('api_management.api')}}">API</a>
-        </li> 
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('api_mashup')}}">Worldwide</a>
+        </li>
         {% if user %}
         <li class="nav-item dropdown">
           <div class="dropdown-toggle ml-3" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
