Add functions required for worldwide-search

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,7 @@
           <a class="nav-link" href="{{url_for('api_management.api')}}">API</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for('api_mashup')}}">Worldwide</a>
+          <a class="nav-link" href="{{url_for('worldwide_mashup')}}">Worldwide</a>
         </li>
         {% if user %}
         <li class="nav-item dropdown">
