Redesign and optimize login buttons functionality

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,9 @@
   <!-- extra headers block -->
   {% block head %}
   {% endblock %}
+  <!-- extra style block -->
+  {% block style %}
+  {% endblock %}
 </head>
 <body style="background-color: #DDD">
     
