Add login buttons to a card

--- a/static/buttons.css
+++ b/static/buttons.css
@@ -5,7 +5,7 @@
 .loginBtn {
   box-sizing: border-box;
   position: relative;
-  /* width: 13em;  - apply for fixed size */
+  width: 16em;  /* apply for fixed size*/ 
   margin: 0.2em;
   padding: 0 15px 0 46px;
   border: none;
