--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,7 @@
     var state_token = '{{ state_token }}';
   </script>
 
-  <!-- Include the Google platform library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include the Google platform library (needs jQuery)-->
   <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer></script>
 {% endblock %}
 
