--- a/templates/restaurant_menu.html
+++ b/templates/restaurant_menu.html
@@ -2,6 +2,19 @@
 
 {% block body %}
 
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for message in messages %}
+        <div id="flash" class="alert alert-success" role="alert" style="position: relative">
+          {{ message }}
+          <span id="flash-close" style="position: absolute; right: 20px;"> 
+            <i class="fas fa-times"></i>
+          </span>
+        </div>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
+
   <div class="row mb-2">
     <div class="col-7 ml-2">
       <h3 style="display: inline-block;">{{ restaurant.name }}</h3>
@@ -15,17 +28,6 @@
     </div>
   </div>
   <hr><br>
-
-
-  {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      {% for message in messages %}
-      <div class="alert alert-success" role="alert">
-        {{ message }}
-      </div>
-      {% endfor %}
-    {% endif %}
-  {% endwith %}
 
   <div class="row justify-content-center">
   {% for item in menu_items %}
