--- a/templates/layout.html
+++ b/templates/layout.html
@@ -65,19 +65,19 @@
     </button>
     
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav ml-auto mr-3">
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('api_management.api')}}">API</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mr-3">
           <a class="nav-link" href="{{url_for('worldwide_mashup')}}">Worldwide</a>
         </li>
         {% if user %}
         <li class="nav-item dropdown">
-          <div class="dropdown-toggle ml-3" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <div class="dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <img src="{{user.picture}}" width="40" height="40" style="background-color: blue; border-radius: 20px">
           </div>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink" style="text-align: center">
             <a class="nav-link dropdown-item" href="#" onclick="logout();">Logout</a>
           </div>
         </li>
